--- a/fontpage.html
+++ b/fontpage.html
@@ -235,7 +235,7 @@
                     detail.innerHTML=obj.问题描述;
                     const like=document.getElementsByClassName("vote-button")[0];
                     like.innerHTML= "赞同"+obj.点赞;
-                    if(picture==="no"){}
+                    if(obj.图片==="no"){}
                     else{
                         const img = new Image();
                         img.src = picture;
